--- a/index.html
+++ b/index.html
@@ -7,24 +7,40 @@
     <!-- CSS -->
     <link rel="stylesheet" href="/assets/css/style.min.css">
     <!-- BOOTSTRAP -->
+    <!--#region Estrutura BOOTSTRAP  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <!--#endregion  -->
 
     <!-- FONT AWESOME -->
+    <!--#region Font Awesome-->
     <script src="https://kit.fontawesome.com/16aea16a8e.js" crossorigin="anonymous"></script>
+    <!--#endregion -->
 
     <title>Portfolio - Solon Santos</title>
 
 </head>
 <body>
-    <h1>Hello World</h1>
+    <header class="container">
+        <div class="d-flex justify-content-between align-items-center h-100">
+            <span>solonSantos</span>
+            <div id="headerIcons">
+                <a href="https://github.com/Solon-Santos-dev" target="_blank" class="mx-2" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="GitHub"><i class="fa-brands fa-github"></i></a>
 
-    <i class="fa-solid fa-poo"></i>
+                <a href="https://www.linkedin.com/in/solon-santos-dev/" target="_blank" class="mx-2" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="LinkedIn"><i class="fa-brands fa-linkedin"></i></a>
 
-    <script src="/assets/js/scripts.js"></script> 
+                <a href="https://www.instagram.com/_solonsantos/" target="_blank" class="mx-2" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Instagram"><i class="fa-brands fa-instagram"></i></a>
 
+                <a href="mailto:contato.solonsantosdev@gmail.com" class="mx-2" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="E-mail"><i class="fa-solid fa-envelope"></i></a>
+            </div>
+        </div>
+    </header>
+
+    
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+
+    <script src="/assets/js/scripts.js"></script> 
 
 </body>
 </html>
