--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         <div class="d-flex justify-content-between align-items-center h-100">
             <span>solonSantos</span>
             <div id="headerIcons">
-                <a href="https://github.com/Solon-Santos-dev" target="_blank" class="mx-2" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="GitHub"><i class="fa-brands fa-github"></i></a>
+                <a href="https://github.com/Solon-Santos-dev" target="_blank" class="mx-2" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-custom-class="custom-tooltip" data-bs-title="GitHub"><i class="fa-brands fa-github"></i></a>
 
-                <a href="https://www.linkedin.com/in/solon-santos-dev/" target="_blank" class="mx-2" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="LinkedIn"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/solon-santos-dev/" target="_blank" class="mx-2" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-custom-class="custom-tooltip" data-bs-title="LinkedIn"><i class="fa-brands fa-linkedin"></i></a>
 
-                <a href="https://www.instagram.com/_solonsantos/" target="_blank" class="mx-2" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Instagram"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.instagram.com/_solonsantos/" target="_blank" class="mx-2" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-custom-class="custom-tooltip" data-bs-title="Instagram"><i class="fa-brands fa-instagram"></i></a>
 
-                <a href="mailto:contato.solonsantosdev@gmail.com" class="mx-2" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="E-mail"><i class="fa-solid fa-envelope"></i></a>
+                <a href="mailto:contato.solonsantosdev@gmail.com" class="mx-2" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-custom-class="custom-tooltip" data-bs-title="E-mail"><i class="fa-solid fa-envelope"></i></a>
             </div>
         </div>
     </header>
