--- a/index.html
+++ b/index.html
@@ -34,6 +34,28 @@
             </div>
         </div>
     </header>
+    <!-- contanier = aplica margin e padding nas laterais / container-fluid = 100% da tela. -->
+    <main class="container-fluid"> 
+        
+    <!-- #region Banner -->
+        <div id="banner">
+            <div class="container">
+                <div class="row">
+                    <div id="left-side" class="col-lg-7 col-md-6 d-flex justify-content-center text-md-start text-center flex-column">
+                        <h1>Olá, eu sou o <span>Solon Santos!</span></h1>
+                        <h2>Desenvolvedor Web & Analista de Sistemas</h2>
+                    </div>
+                    <div id="right-side" class="col-lg-5 col-md-6 d-flex justify-content-center">
+                        <div class="col-8">
+                            <img src="/assets/img/imagem-banner.png" alt="Imagem Banner" class="img-fluid">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    <!-- #endregion Banner -->
+    </main>
+
 
     
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
